--- a/index.html
+++ b/index.html
@@ -7,29 +7,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Identifying Benign and Malignant Cells in Microscopic Images</h1>
+    <div class="title">
+        <h1>Utilizing Machines to Identify Benign and Malignant Cells in Microscopic Images</h1>
+        <small>a DS3 project, conducted by Shamita Goyal, Hannah Huang, Ryan Estanislao, and Nicolas Toon</small>
+    </div>
 
-    <h2>Abstract</h2>
-    <p>
-        With the rise of new technology in today's world, one of the goals of developing artificial
-        intelligence is to aide medical professionals in making diagnosis. One of the biggest areas
-        where artificial intelligence is being utilized is identifying cancerous cells.
+    <div class="image">
+        <img src="images/SOB_M_PC-15-190EF-400-009.png" alt="breast tumor" width="50%" class="center">
+        <i class="caption">A microscopic image of a malignant breast tumor (papillary carcinoma) under 400X magnification.</i>
+    </div>
 
-        In this project, we utilized the Breast Cancer Histopathological Database (BreakHis), 
-        a labeled dataset of breast tumor images taken under a microscope. The goal 
-        of our project was to engineer a computer vision model that could analyze patterns
-        in the given images. With its pattern recognition, our model can accurately
-        determine whether a tumor was malignant, as well as the type of tumor.
+    <div class="abstract">
+        <h2>Abstract</h2>
+        <p>
+            With the rise of new technology in today's world, one of the goals of developing artificial
+            intelligence is to aide medical professionals in making diagnosis. One of the biggest areas
+            where artificial intelligence is being utilized is identifying cancerous cells.
+        </p>
+        <p>
+            In this project, we utilized the Breast Cancer Histopathological Database (BreakHis), 
+            a labeled dataset of breast tumor images taken under a microscope. The goal 
+            of our project was to engineer a computer vision model that could analyze patterns
+            in the given images. With its pattern recognition, our model can accurately
+            determine whether a tumor was malignant, as well as the type of tumor.
+        </p>
+        <p>
+            This project showcases the development of a machine learning pipeline that can 
+            identify benign and malignant breast cells.
+        </p>
+    </div>
 
-        This project showcases the development of a machine learning pipeline that can 
-        identify benign and malignant breast cells.
-    </p>
+    <div class="question">
+        <h2>Question</h2>
+        <p>
+            To the untrained human eye, images of breast tumor cells are indifferentiable, 
+            but a machine learning model undoubtedly can. To what extent can a trained 
+            model identify types of breast tumors?
+        </p>
+    </div>
 
-    <h2>Question</h2>
-    <p>
-        To the untrained human eye, images of breast tumor cells are indifferentiable, 
-        but a machine learning model undoubtedly can. To what extent can a trained 
-        model identify types of breast tumors?
-    </p>
-</body>
+    </body>
 </html>
