--- a/index.html
+++ b/index.html
@@ -46,5 +46,29 @@
         </p>
     </div>
 
+    <div class="focus">
+        <h2>Project Focus</h2>
+        <p>
+            This project focuses on identifying certain types of breast cancer tumors in a given tissue sample. 
+            While some types of tumors are benign, such as adenosis, fibroadenoma, phyllodes tumor, and tubular 
+            adenoma tumors, others are malignant and must be treated imminently, including carcinoma, lobular carcinoma, 
+            mucinous carcinoma, and papillary carcinoma. We utilized an ____ model to accurately, but also quickly, 
+            identify tumor types.
+        </p>
+    </div>
+
+    <div class="dataset">
+        <h2>BreakHis Dataset</h2>
+        <p>
+            The BreakHis dataset contains 9109 images of breast tumor tissue that comes from 82 patients. Each image 
+            is magnified by either 40x, 100x, 200x, or 400x. Each image is a 700X460 pixel, RGB, 8-bit depth, PNG image. 
+            Additionally, images are separated into multiple types of benign and malignant tumors, with 2,480 benign 
+            and 5,429 malignant images. The types of benign tumors are adenosis (A), fibroadenoma (F), phyllodes 
+            tumor (PT), and tubular adenoma (TA), and the types of malignant tumors are carcinoma (DC), lobular 
+            carcinoma (LC), mucinous carcinoma (MC), and papillary carcinoma (PC). The dataset collected samples for 
+            imaging through partial mastectomy or excisional biopsy.
+        </p>
+    </div>
+
     </body>
 </html>
