--- a/index.html
+++ b/index.html
@@ -37,6 +37,26 @@
         </p>
     </div>
 
+    <div class="background">
+        <h2>Background</h2>
+        <p>
+            Breast cancer is the most common cancer for women all around the world. It is 
+            estimated that 1 in 8 women will develop breast cancer in their lifetime. Detecting 
+            the cancer cells early is crucial for improving the health of cancer patients before 
+            it is too late. However, traditional methods like human examinations of histopathological 
+            images are inefficient and subject to human error. These false positives and false 
+            negatives may have an extremely negative impact on the lives of some women. As a result, 
+            with the advancements of technology that came with time, machine learning models have 
+            shown promise in being able to automate the process of classifying cancer cells in medical images.
+        </p>
+        <p>
+            In this project, we aim to leverage machine learning to be able to assist cancer specialists 
+            in identifying different cancer cells given microscopic images. By training our model to recognise 
+            the different cell types, we hope to be able to help the medical field expand its use of AI assisted 
+            diagnostics and make even greater contributions in medicine.
+        </p>
+    </div>
+
     <div class="question">
         <h2>Question</h2>
         <p>
