--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <h2>Background</h2>
         <p>
             Breast cancer is the most common cancer for women all around the world. It is 
-            estimated that 1 in 8 women will develop breast cancer in their lifetime. Detecting 
+            estimated that 1 in 8 women will develop breast cancer in their lifetime. While some types of tumors are benign, such as adenosis, fibroadenoma, phyllodes tumor, and tubular 
+            adenoma tumors, others are malignant and must be treated imminently, including carcinoma, lobular carcinoma, 
+            mucinous carcinoma, and papillary carcinoma. Detecting 
             the cancer cells early is crucial for improving the health of cancer patients before 
             it is too late. However, traditional methods like human examinations of histopathological 
             images are inefficient and subject to human error. These false positives and false 
@@ -69,11 +71,8 @@
     <div class="focus">
         <h2>Project Focus</h2>
         <p>
-            This project focuses on identifying certain types of breast cancer tumors in a given tissue sample. 
-            While some types of tumors are benign, such as adenosis, fibroadenoma, phyllodes tumor, and tubular 
-            adenoma tumors, others are malignant and must be treated imminently, including carcinoma, lobular carcinoma, 
-            mucinous carcinoma, and papillary carcinoma. We utilized an ____ model to accurately, but also quickly, 
-            identify tumor types.
+            This project focuses on testing differently structured models to identify certain types of breast cancer tumors in a given tissue sample. 
+            We chose three models to test out: a Convolutional Neural Network (CNN), a CNN structured as a U-Net, and a Vision Transformer. 
         </p>
     </div>
 
@@ -89,6 +88,12 @@
             imaging through partial mastectomy or excisional biopsy.
         </p>
     </div>
+
+    <div class="results"></div>
+
+    <div class="conclusion"></div>
+
+    <div class="acknowledgements"></div>
 
     </body>
 </html>
