fixed the broken links in the jupyter notebooks

--- a/index.html
+++ b/index.html
@@ -81,35 +81,35 @@
         <h3 class="model-type">Computer Vision</h3>
         <div class="image">
             <img id="model" src="images/resnet.jpg">
-            <i class="caption">A visual representation of ResNet's structure [<a href="https://www.youtube.com/watch?v=woEs7UCaITo">image credit</a>]</i>
+            <i class="caption">A visual representation of ResNet's structure [<a href="https://www.youtube.com/watch?v=woEs7UCaITo" target="_blank">image credit</a>]</i>
         </div>
         <p>
             Computer vision is a broad, umbrella term that many models fall under. However, in this project, we used ResNet, a pretrained convolutional neural network, provided
             by Torchvision. ResNet was built in 2015 for the purposes of image recognition, and will essentially serve as our goal for this project. 
-            Read the <a href="https://github.com/ShamitaGoyal/dsc3-projects-2025/blob/main/CV_model.ipynb">Jupyter Notebook</a> to learn more!
+            Read the <a href="https://github.com/ShamitaGoyal/dsc3-projects-2025/blob/main/notebooks/CV_model.ipynb" target="_blank">Jupyter Notebook</a> to learn more!
         </p>
         <h3 class="model-type">Vision Transformer</h3>
         <div class="image">
             <img id="model" src="images/vision-transformer.png">
-            <i class="caption">A visual representation of the architecture of a vision transformer [<a href="https://www.leewayhertz.com/vision-transformer-model/">image credit</a>]</i>
+            <i class="caption">A visual representation of the architecture of a vision transformer [<a href="https://www.leewayhertz.com/vision-transformer-model/" target="_blank">image credit</a>]</i>
         </div>
         <p>
             Vision transformers use a tokenization pipeline to process images. Similar to how large language models like ChatGPT use tokens to parse through words, 
             vision transformers tokenize patches of the image and treat them like tokens, decipher patterns and relationships between varying patches. Originally, they were designed
             as alternatives to convolutional neural networks, and are now seen to have higher ceilings than convolutional neural networks, with the drawback of data inefficiency.
             Vision transformers require large amounts of data to be accurate and are computationally expensive. 
-            Read the <a href="https://github.com/ShamitaGoyal/dsc3-projects-2025/blob/main/notebooks/vit_nonbinary.ipynb">Jupyter Notebook</a> to learn more!
+            Read the <a href="https://github.com/ShamitaGoyal/dsc3-projects-2025/blob/main/notebooks/vit_nonbinary.ipynb" target="_blank">Jupyter Notebook</a> to learn more!
         </p>
         <h3 class="model-type">U-Net</h3>
         <div class="image">
             <img id="model" src="images/unet.png">
-            <i class="caption">A visual representation of the U-Net's u-shape structure [<a href="https://rpubs.com/eR_ic/unet">image credit</a>]</i>
+            <i class="caption">A visual representation of the U-Net's u-shape structure [<a href="https://rpubs.com/eR_ic/unet" target="_blank">image credit</a>]</i>
         </div>
         <p>
             U-Nets is another form of convolutional neural network, but employs a specific structure to improve performance. As in the name, U-Nets are structured in a u-shape, 
             due to the connections linking convolutional layers opposite of each other, while still being connected with adjacent layers. U-Nets are very widely used in 
             image generation models, such as DALL-E, Stable Diffusion, and Midjourney, although it was originally created for biomedical image segmentation tasks similar to this project.
-            Read the <a href="https://github.com/ShamitaGoyal/dsc3-projects-2025/blob/main/unet_model_implementation.ipynb">Jupyter Notebook</a> to learn more!
+            Read the <a href="https://github.com/ShamitaGoyal/dsc3-projects-2025/blob/main/notebooks/UNET-implementation.ipynb" target="_blank">Jupyter Notebook</a> to learn more!
         </p>
     </div>
 
@@ -220,7 +220,7 @@
         </p>
         <p>
             We would like to thank the authors of the BreakHis dataset for making their work public for anyone to freely use and analyze. 
-            Their paper can be found <a href="https://www.inf.ufpr.br/lesoliveira/download/TBME-00608-2015-R2-preprint.pdf">here</a>.
+            Their paper can be found <a href="https://www.inf.ufpr.br/lesoliveira/download/TBME-00608-2015-R2-preprint.pdf" target="_blank">here</a>.
         </p>
         <p>
             We would also like to thank DS3 @ UCSD for giving us guidance throughout the project!
